--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --config=config/webpack.dev.js",
+    "build": "webpack --config=config/webpack.dev.js",
+    "buildstart": "webpack --config=config/webpack.dev.js && webpack-dev-server --config=config/webpack.dev.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "css-loader": "^0.28.10",
+    "style-loader": "^0.20.3",
     "webpack": "^4.1.1"
   },
   "devDependencies": {
     "eslint": "^4.18.2",
+    "extract-loader": "^1.0.2",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "webpack-cli": "^2.0.11",
     "webpack-dev-server": "^3.1.1"
   }
