--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
     "webpack": "^4.1.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-async-to-promises": "^1.0.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.18.2",
     "extract-loader": "^1.0.2",
     "file-loader": "^1.1.11",
