--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --config=config/webpack.dev.js",
     "build": "webpack --config=config/webpack.dev.js",
-    "buildstart": "webpack --config=config/webpack.dev.js && webpack-dev-server --config=config/webpack.dev.js"
+    "buildstart": "webpack --config=config/webpack.dev.js && webpack-dev-server --config=config/webpack.dev.js",
+    "dev": "node ./src/server/main.js"
   },
   "keywords": [],
   "author": "",
@@ -26,10 +27,14 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.18.2",
+    "express": "^4.16.3",
     "extract-loader": "^1.0.2",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
+    "source-map-loader": "^0.2.3",
     "webpack-cli": "^2.0.11",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-dev-middleware": "^3.0.1",
+    "webpack-dev-server": "^3.1.1",
+    "webpack-hot-middleware": "^2.21.2"
   }
 }
