--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --config=config/webpack.dev.js",
     "build": "webpack --config=config/webpack.dev.js",
     "buildstart": "webpack --config=config/webpack.dev.js && webpack-dev-server --config=config/webpack.dev.js",
-    "dev": "node ./src/server/main.js"
+    "dev": "nodemon --watch config --watch src/server src/server/main.js"
   },
   "keywords": [],
   "author": "",
@@ -31,10 +31,13 @@
     "extract-loader": "^1.0.2",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.6",
     "source-map-loader": "^0.2.3",
     "webpack-cli": "^2.0.11",
     "webpack-dev-middleware": "^3.0.1",
     "webpack-dev-server": "^3.1.1",
-    "webpack-hot-middleware": "^2.21.2"
+    "webpack-hot-middleware": "^2.21.2",
+    "webpack-html-plugin": "^0.1.1",
+    "webpack-mild-compile": "^3.0.0"
   }
 }
