--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --config=config/webpack.dev.js",
     "build": "webpack --config=config/webpack.dev.js",
     "buildstart": "webpack --config=config/webpack.dev.js && webpack-dev-server --config=config/webpack.dev.js",
-    "dev": "nodemon --watch config --watch src/server src/server/main.js"
+    "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js"
   },
   "keywords": [],
   "author": "",
