--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^0.28.10",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "style-loader": "^0.20.3",
     "webpack": "^4.1.1"
   },
@@ -26,6 +28,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^4.18.2",
     "express": "^4.16.3",
     "extract-loader": "^1.0.2",
