--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
+    "react-hot-loader": "^4.0.0",
     "source-map-loader": "^0.2.3",
     "webpack-cli": "^2.0.11",
     "webpack-dev-middleware": "^3.0.1",
