--- a/package.json
+++ b/package.json
@@ -35,7 +35,13 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
+    "node-sass": "^4.7.2",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.3.0",
     "react-hot-loader": "^4.0.0",
+    "sass-loader": "^6.0.7",
     "source-map-loader": "^0.2.3",
     "webpack-cli": "^2.0.11",
     "webpack-dev-middleware": "^3.0.1",
