--- a/package.json
+++ b/package.json
@@ -7,19 +7,35 @@
     "start": "webpack-dev-server --config=config/webpack.dev.js",
     "build": "webpack --config=config/webpack.dev.js",
     "buildstart": "webpack --config=config/webpack.dev.js && webpack-dev-server --config=config/webpack.dev.js",
-    "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js"
+    "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js",
+    "prod": "set NODE_ENV=production && node src/server/main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@angular/common": "^5.2.9",
+    "@angular/compiler": "^5.2.9",
+    "@angular/core": "^5.2.9",
+    "@angular/forms": "^5.2.9",
+    "@angular/http": "^5.2.9",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/router": "^5.2.9",
+    "core-js": "^2.5.3",
     "css-loader": "^0.28.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "reflect-metadata": "^0.1.12",
+    "rxjs": "^5.5.7",
     "style-loader": "^0.20.3",
-    "webpack": "^4.1.1"
+    "webpack": "^4.1.1",
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
+    "@types/core-js": "^0.9.46",
+    "@types/node": "^9.6.0",
+    "awesome-typescript-loader": "^4.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
@@ -43,6 +59,7 @@
     "react-hot-loader": "^4.0.0",
     "sass-loader": "^6.0.7",
     "source-map-loader": "^0.2.3",
+    "typescript": "^2.7.2",
     "webpack-cli": "^2.0.11",
     "webpack-dev-middleware": "^3.0.1",
     "webpack-dev-server": "^3.1.1",
