--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --config=config/webpack.dev.js",
     "buildstart": "webpack --config=config/webpack.dev.js && webpack-dev-server --config=config/webpack.dev.js",
     "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js",
-    "prod": "set NODE_ENV=production && node src/server/main.js"
+    "prod": "NODE_ENV=production node src/server/main.js"
   },
   "keywords": [],
   "author": "",
