--- a/package.json
+++ b/package.json
@@ -1,70 +1,40 @@
 {
-  "name": "webpack_course",
+  "name": "webpack-course",
   "version": "1.0.0",
-  "description": "",
+  "description": "Webpack: Beyond the Basics Course",
+  "repository": "https://github.com/lawwantsin/webpack-course.git",
   "main": "index.js",
-  "scripts": {
-    "start": "webpack-dev-server --config=config/webpack.dev.js",
-    "build": "webpack --config=config/webpack.dev.js",
-    "buildstart": "webpack --config=config/webpack.dev.js && webpack-dev-server --config=config/webpack.dev.js",
-    "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js",
-    "prod": "NODE_ENV=production node src/server/main.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/router": "^5.2.9",
-    "core-js": "^2.5.3",
+    "ajv": "^6.2.1",
+    "babel-cli": "*",
+    "babel-core": "*",
+    "babel-loader": "^7.1.3",
+    "babel-minify-webpack-plugin": "^0.3.0",
+    "babel-plugin-transform-runtime": "*",
+    "babel-polyfill": "*",
+    "babel-preset-env": "*",
     "css-loader": "^0.28.10",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "^5.5.7",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.1.1",
-    "zone.js": "^0.8.20"
-  },
-  "devDependencies": {
-    "@types/core-js": "^0.9.46",
-    "@types/node": "^9.6.0",
-    "awesome-typescript-loader": "^4.0.1",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-async-to-promises": "^1.0.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "^4.18.2",
-    "express": "^4.16.3",
-    "extract-loader": "^1.0.2",
+    "extract-loader": "1.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.0.6",
-    "less": "^3.0.1",
-    "less-loader": "^4.1.0",
-    "node-sass": "^4.7.2",
-    "pug": "^2.0.3",
-    "pug-loader": "^2.3.0",
-    "react-hot-loader": "^4.0.0",
-    "sass-loader": "^6.0.7",
-    "source-map-loader": "^0.2.3",
-    "typescript": "^2.7.2",
-    "webpack-cli": "^2.0.11",
-    "webpack-dev-middleware": "^3.0.1",
-    "webpack-dev-server": "^3.1.1",
-    "webpack-hot-middleware": "^2.21.2",
-    "webpack-html-plugin": "^0.1.1",
-    "webpack-mild-compile": "^3.0.0"
+    "html-webpack-plugin": "^3.0.4",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "react": "^16.2.0",
+    "style-loader": "^0.20.2",
+    "url-loader": "0.6.2",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-middleware": "2.0.6",
+    "webpack-dev-server": "^3.0.0",
+    "webpack-hot-middleware": "2.21.0"
+  },
+  "scripts": {
+    "start": "webpack-dev-server --config=config/webpack.dev.js",
+    "build": "BABEL_ENV=production webpack --config=config/webpack.prod.js --env.NODE_ENV=production ",
+    "build:dev": "webpack --config=config/webpack.dev.js",
+    "dev": "nodemon --inspect --watch src/server --watch config src/server/main.js",
+    "prod": "NODE_ENV=production node src/server/main.js"
   }
 }
