--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "babel-preset-env": "*",
     "css-loader": "^0.28.10",
     "extract-loader": "1.0.2",
-    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
@@ -36,5 +35,8 @@
     "build:dev": "webpack --config=config/webpack.dev.js",
     "dev": "nodemon --inspect --watch src/server --watch config src/server/main.js",
     "prod": "NODE_ENV=production node src/server/main.js"
+  },
+  "devDependencies": {
+    "extract-text-webpack-plugin": "^4.0.0-beta.0"
   }
 }
