--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "babel-plugin-transform-runtime": "*",
     "babel-polyfill": "*",
     "babel-preset-env": "*",
+    "compression-webpack-plugin": "^1.1.11",
     "css-loader": "^0.28.10",
+    "express-static-gzip": "^0.3.2",
     "extract-loader": "1.0.2",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
@@ -31,7 +33,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config=config/webpack.dev.js",
-    "build": "BABEL_ENV=production webpack --config=config/webpack.prod.js --env.NODE_ENV=production ",
+    "build": "set BABEL_ENV=production && webpack --config=config/webpack.prod.js --env.NODE_ENV=production ",
     "build:dev": "webpack --config=config/webpack.dev.js",
     "dev": "nodemon --inspect --watch src/server --watch config src/server/main.js",
     "prod": "NODE_ENV=production node src/server/main.js"
