--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,8 @@
         },
         "debug": false
       }
-    ]
-  ]
+    ],
+    "babel-preset-react"
+  ],
+  "plugins": ["transform-runtime", "react-hot-loader/babel"]
 }
