--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "ajv": "^6.2.1",
+    "ajv": "^6.2.0",
     "babel-cli": "*",
     "babel-core": "*",
     "babel-loader": "^7.1.3",
@@ -14,31 +14,40 @@
     "babel-plugin-transform-runtime": "*",
     "babel-polyfill": "*",
     "babel-preset-env": "*",
-    "compression-webpack-plugin": "^1.1.11",
+    "babel-preset-es2015": "*",
+    "babel-preset-react": "^6.24.1",
+    "brotli-webpack-plugin": "^0.5.0",
+    "compression-webpack-plugin": "^1.1.10",
     "css-loader": "^0.28.10",
+    "cssnano": "*",
+    "ejs-loader": "^0.3.1",
+    "express": "*",
     "express-static-gzip": "^0.3.2",
-    "extract-loader": "1.0.2",
-    "file-loader": "^1.1.11",
+    "extract-loader": "^1.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
+    "file-loader": "^1.1.10",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "markdown-with-front-matter-loader": "^0.1.0",
+    "optimize-css-assets-webpack-plugin": "*",
     "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.0.0",
     "style-loader": "^0.20.2",
     "url-loader": "0.6.2",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.10",
+    "webpack": "^4.0.0",
+    "webpack-bundle-analyzer": "^2.9.1",
+    "webpack-cli": "^2.0.9",
     "webpack-dev-middleware": "2.0.6",
     "webpack-dev-server": "^3.0.0",
-    "webpack-hot-middleware": "2.21.0"
+    "webpack-hot-middleware": "2.21.0",
+    "webpack-mild-compile": "^2.0.0"
   },
   "scripts": {
     "start": "webpack-dev-server --config=config/webpack.dev.js",
-    "build": "set BABEL_ENV=production && webpack --config=config/webpack.prod.js --env.NODE_ENV=production ",
+    "build": "BABEL_ENV=production webpack --config=config/webpack.prod.js --env.NODE_ENV=production ",
     "build:dev": "webpack --config=config/webpack.dev.js",
     "dev": "nodemon --inspect --watch src/server --watch config src/server/main.js",
     "prod": "NODE_ENV=production node src/server/main.js"
-  },
-  "devDependencies": {
-    "extract-text-webpack-plugin": "^4.0.0-beta.0"
   }
 }
